<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/counterName_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/counter"
        android:cursorVisible="false"
        android:hint="@string/counter"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:text="@string/counter"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/counter_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="15dp"
        android:text="0"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/counterName_edittext"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        app:layout_constraintStart_toEndOf="@id/counter_textview"
        android:id="@+id/increment_imagebutton"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/ic_add"
        android:contentDescription="@string/increment_counter" />

    <ImageButton
        app:layout_constraintStart_toEndOf="@id/increment_imagebutton"
        android:id="@+id/decrement_imagebutton"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/ic_remove"
        android:contentDescription="@string/decrement_counter" />

    <ImageButton
        app:layout_constraintStart_toEndOf="@id/decrement_imagebutton"
        android:id="@+id/delete_imagebutton"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/circle_button"
        android:layout_marginStart="20dp"
        app:srcCompat="@drawable/ic_close"
        android:contentDescription="@string/delete_counter" />
</androidx.constraintlayout.widget.ConstraintLayout>
